[package]
name = "remote-ff"
version = "3.0.0"
authors = ["Julian Blake Kongslie <jblake@jblake.org>"]

[dependencies]
clap = "*"
filetime = "*"
hyper = "0.9.*"
lazy_static = "*"
marksman_escape = "*"
rand = "*"
regex = "0.1.*"
rusqlite = "*"
rustc-serialize = "*"
rustful = "*"
scraper = "*"
time = "*"
